--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do Site</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis/h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quos quis rerum quam, vitae provident. Optio earum perferendis iure, at sit vero nostrum repellendus reprehenderit sed laborum nesciunt impedit est.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curse de Javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo asperiores facere quo ipsa harum omnis. Quas at reprehenderit culpa minima impedit quidem, saepe molestiae! Exercitationem reiciendis accusantium earum maiores quisquam!</p>
         </article>
     </main>
 </body>
