--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae quos quis rerum quam, vitae provident. Optio earum perferendis iure, at sit vero nostrum repellendus reprehenderit sed laborum nesciunt impedit est.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curse de Javascript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo asperiores facere quo ipsa harum omnis. Quas at reprehenderit culpa minima impedit quidem, saepe molestiae! Exercitationem reiciendis accusantium earum maiores quisquam!</p>
+            <P><a href="curso-js.html">Acesse o curso de Javascript</a></P>
         </article>
     </main>
 </body>
